[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/ui/dialog_background.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/sound_mgmt_dialog.gd" type="Script" id=2]
[ext_resource path="res://assets/themes/title_labels.tres" type="Theme" id=3]
[ext_resource path="res://assets/themes/global.tres" type="Theme" id=4]
[ext_resource path="res://assets/fonts/Jellee-Roman.otf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/images/ui/settings_right_small.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 5 )

[node name="SoundMgmtDlg" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 2 )

[node name="DialogBackground" parent="." instance=ExtResource( 1 )]
self_modulate = Color( 0, 0, 0, 0.690196 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 1060.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1880.0
margin_bottom = 232.0
theme = ExtResource( 3 )
text = "Sound Node Settings"
align = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 236.0
margin_right = 1880.0
margin_bottom = 921.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tree" type="Tree" parent="MarginContainer/VBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/title_button_font = SubResource( 2 )
custom_fonts/font = SubResource( 1 )
columns = 3
hide_root = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 925.0
margin_right = 1880.0
margin_bottom = 1040.0

[node name="CancelBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 155.0
margin_bottom = 115.0
text = "Cancel"
flat = true

[node name="SpacerControl" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 159.0
margin_right = 897.0
margin_bottom = 115.0
size_flags_horizontal = 3

[node name="SaveBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 901.0
margin_right = 1039.0
margin_bottom = 115.0
text = "Save"
flat = true

[node name="SpacerControl2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1043.0
margin_right = 1781.0
margin_bottom = 115.0
size_flags_horizontal = 3

[node name="OKBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1785.0
margin_right = 1880.0
margin_bottom = 115.0
text = "OK"
flat = true

[node name="PlayBtnTextureRect" type="TextureRect" parent="."]
margin_left = -239.0
margin_top = 125.0
margin_right = -199.0
margin_bottom = 165.0
texture = ExtResource( 6 )

[connection signal="button_pressed" from="MarginContainer/VBoxContainer/Control/Tree" to="." method="_on_Tree_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CancelBtn" to="." method="_on_CancelBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SaveBtn" to="." method="_on_SaveBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OKBtn" to="." method="_on_OKBtn_pressed"]
